# Lessario

./: .gitignore  AIRepoContext.md  Founder_TODO.md  package-lock.json
.obsidian/: workspace.json
Career/: ENGINEERING_PATHS_ROADMAP.md  README.md  next.md
Career/01_Foundations_STEM/Biology_Biotech/: LEARNING_GUIDE.md
Career/01_Foundations_STEM/CLearning/: C_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md  Project_1_Calculator.c
Career/01_Foundations_STEM/Chemistry/: LEARNING_GUIDE.md
Career/01_Foundations_STEM/Mathematics/: LEARNING_GUIDE.md
Career/01_Foundations_STEM/Physics/: LEARNING_GUIDE.md
Career/01_Foundations_STEM/Python_Development/: LEARNING_GUIDE.md
Career/02_Software_Engineering/Backend_Engineering/: BACKEND_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/02_Software_Engineering/Cloud_DevOps/: LEARNING_GUIDE.md
Career/02_Software_Engineering/Cybersecurity/: CYBER_PROJECTS_ROADMAP.md
Career/02_Software_Engineering/Data_Engineering/: DATA_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/02_Software_Engineering/Full_Stack_Web/: FULLSTACK_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/02_Software_Engineering/Game_Development/: GAME_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/02_Software_Engineering/Mobile_Development/: LEARNING_GUIDE.md  MOBILE_PROJECTS_ROADMAP.md
Career/02_Software_Engineering/Rust_Programming/: LEARNING_GUIDE.md
Career/03_AI_Emerging_Tech/AI_Engineering/: LEARNING_GUIDE.md
Career/03_AI_Emerging_Tech/IoT_Engineering/: IOT_PROJECTS_ROADMAP.md
Career/03_AI_Emerging_Tech/Quantum_Technology/: LEARNING_GUIDE.md  QUANTUM_PROJECTS_ROADMAP.md
Career/03_AI_Emerging_Tech/Web3_Development/: LEARNING_GUIDE.md
Career/04_Hardware_Engineering/3D_Printing_Manufacturing/: LEARNING_GUIDE.md  MANUFACTURING_PROJECTS_ROADMAP.md
Career/04_Hardware_Engineering/Automobile_Engineering/: AUTO_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/04_Hardware_Engineering/Battery_Energy_Tech/: ENERGY_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/04_Hardware_Engineering/Civil_Engineering/: CIVIL_PROJECTS_ROADMAP.md
Career/04_Hardware_Engineering/Drone_Engineering/: DRONE_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/04_Hardware_Engineering/Robotics_Engineering/: LEARNING_GUIDE.md
Career/04_Hardware_Engineering/Rocket_Engineering/: ROCKET_PROJECTS_ROADMAP.md
Career/04_Hardware_Engineering/Semiconductor_Design/: LEARNING_GUIDE.md  SEMI_PROJECTS_ROADMAP.md
Career/04_Hardware_Engineering/Weapon_Manufacturing/: LEARNING_GUIDE.md  WEAPON_PROJECTS_ROADMAP.md
Career/05_Business_Finance/Business_Entrepreneurship/: BUSINESS_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/05_Business_Finance/Finance_Investing/: LEARNING_GUIDE.md
Career/06_Knowledge_Wisdom/Ancient_Indian_Wisdom/: LEARNING_GUIDE.md  MATRIX_PHILOSOPHY_AND_HIGHER_CONSCIOUSNESS.md  THE_BOOK_OF_SECRETS_COMPLETE_GUIDE.md  The_Book_of_Secrets_EXTRACTED.txt
Career/06_Knowledge_Wisdom/Energy_Science/: LEARNING_GUIDE.md
Career/06_Knowledge_Wisdom/Politics_Governance/: LEARNING_GUIDE.md
Career/AI_Engineering/: AI_PROJECTS_ROADMAP.md
Career/Ancient_Indian_Wisdom/: ADVAITA_VEDANTA_AND_SCIENCE.md  MYSTICISM_LUCK_MANIFESTATION.md
Career/CLearning/: Project_2_GradeSystem.c
Career/CLearning/GradeSystem/: GRADE_SYSTEM_STEP_BY_STEP.txt
Career/Civil_Engineering/: LEARNING_GUIDE.md
Career/Cloud_DevOps/: DEVOPS_PROJECTS_ROADMAP.md
Career/Cybersecurity/: LEARNING_GUIDE.md
Career/DRDO_Engineering/: DRDO_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/FinTech/: FINTECH_PROJECTS_ROADMAP.md  LEARNING_GUIDE.md
Career/History_Philosophy/: LEARNING_GUIDE.md
Career/IoT_Engineering/: LEARNING_GUIDE.md
Career/Python_Development/: PYTHON_PROJECTS_ROADMAP.md
Career/Robotics_Engineering/: ROBOTICS_PROJECTS_ROADMAP.md
Career/Rocket_Engineering/: LEARNING_GUIDE.md
Career/Rust_Programming/: RUST_PROJECTS_ROADMAP.md
Career/Web3_Development/: WEB3_PROJECTS_ROADMAP.md
Client Projects/AR Robot Filter App/: README - Copy.md  TECH_STACK.md
Client Projects/MadrasDeckEnterainment/EventConducting/: file.md
Client Projects/Nijeesh/: ISW2026_30Sec_Storyboard.md  ISW2026_Prompts.md  NijeeshWork.md
Lessario Documents/: README.md  lessario_studios.html
Lessario Documents/07_Academy_Knowledge_Base/: README.md  Technical_Standards_2026.md
Lessario Documents/Lessario Website/: Founder_TODO.md
Lessario Documents/mails/: investor_pitch_nitish.md  krafton_intro_sean.md  raghuram_welcome.md  thamizharasan_welcome.md
Lessario Website/: Founder_TODO.md
Lessario Website/Old/: 2.html
Lessario Website/lessario-app/: index.html  package-lock.json  package.json
Lessario Website/lessario-app/src/: App.css  (+1 more)
LessarioEngine/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  TECH_STACK.md  TODO.md  build_error.txt  export_windows.ps1
LessarioEngine/cmake/: CopyIfExists.cmake
LessarioEngine/cpp_include/components/: Components.h
LessarioEngine/cpp_include/core/: Camera.h  Engine.h  Mesh.h  Shader.h  Texture.h
LessarioEngine/cpp_include/physics/: PhysicsSystem.h
LessarioEngine/cpp_include/vfx/: ParticleSystem.h
LessarioEngine/cpp_include/world/: ModelLoader.h  Skybox.h  Water.h
LessarioEngine/cpp_src/: main.cpp
LessarioEngine/cpp_src/core/: Engine.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  tinygltf_impl.cpp
LessarioEngine/cpp_src/physics/: PhysicsSystem.cpp
LessarioEngine/cpp_src/vfx/: ParticleSystem.cpp
LessarioEngine/cpp_src/world/: ModelLoader.cpp  Skybox.cpp  Water.cpp
LessarioEngine/export - Copy/windows/lib/: glfw3.lib
LessarioEngine/export - Copy/windows/lib/EnTT/cmake/: EnTTConfig.cmake  EnTTConfigVersion.cmake
LessarioEngine/export - Copy/windows/lib/pkgconfig/: entt.pc  glfw3.pc
LessarioEngine/src/: components.rs  engine.rs  main.rs  physics.rs  vfx.rs  world.rs
LessarioEngine/src/core_engine/: camera.rs  mesh.rs  shader.rs  texture.rs
Notes/Arun sir work/: Tasks.md
Notes/Personal/: Cars.md  Linkedin.md  Runway using this investment.md  own country.md
Tasks/: Daily_Project_Status_2026_04_24.md  Daily_Routine_Checklist.md
Thiruppugazh/: Thirupugal_62_Thandai_Ani.md
(+7212 files in other folders)
