[package]
name = "lessario_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
glfw = "0.52"
gl = "0.1.4"
glam = "0.24"
image = "0.24"
gltf = "1.4"
rapier3d = "0.18"
hecs = "0.10"
# NOTE: UI omitted for exact translation complexity in a single pass, we will focus on core Engine, Rendering, ECS, Physics.
